Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8214307
[lworld][C1] Access to flattened fields does not support nested flattened fields
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P3
Fix Version/s:
repo-valhalla
Affects Version/s:
repo-valhalla
Component/s:
hotspot
Labels:
c1
lworld
valhalla
Subcomponent:
compiler
Description
The initial implementation to access flattened fields is lacking support for nested flattened fields.
Attachments
Activity
People
Assignee:
Frederic Parain
Reporter:
Frederic Parain
Votes
:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
2018-11-26 09:05
Updated:
2018-11-28 07:27
Resolved:
2018-11-28 07:27