8214307: [lworld][C1] Access to flattened fields does not support nested flattened fields