src/hotspot/share/c1/c1_GraphBuilder.hpp
@@ -270,6 +270,8 @@ class GraphBuilder {
   // value types
   void new_value_type_instance(int klass_index);
   void withfield(int field_index);
+  void copy_value_content(ciValueKlass* vk, Value src, int src_off, Value dest, int dest_off,
+       ValueStack* state_before, bool needs_patching);
 
   // stack/code manipulation helpers
   Instruction* append_with_bci(Instruction* instr, int bci);
